# sysdweb

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py  setup.py  sysdweb.conf  sysdweb.py
.github/workflows/: python-publish.yml
sysdweb/: __init__.py  config.py  main.py  server.py  systemd.py
sysdweb/templates/static/css/: sysdweb.css
sysdweb/templates/static/js/: sysdweb.js
sysdweb/templates/views/: index.tpl  journal.tpl
systemd/: sysdweb-system.service  sysdweb-user.service
